<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="pl">
    //STATIC STRINGS
        <string name="app_name">Escape From The City</string>
        <string name="Start">Start</string>

        //SCENARIO 0
            <string name="Scenario_0">
                The Night was dark and full of terrors...........
                \n
                You woke up in an alley.........
                \n
                In a City kind of City...
                \n
                Maniacal laughter in the background..
            </string>
            <string name="health">
               Health: %d
            </string>
        //SCENARIO 0
    //STATIC STRINGS
    //DYNAMIC STRINGS
        //SCENARIO 0
        //BUTTON NAMES
            <string name="scenario_option_1">%s</string>
            <string name="scenario_option_2">%s</string>
        //BUTTON NAMES
        //SCENARIO 0
        //OPTION 1
            <string name="header_1">You woke, chose Dumpster or Bag</string>
            <string name="options">%s</string>
            <string name="action_option_1">Dynamic Action Option 1</string>
        //OPTION 1
        //OPTION 2
            <string name="header_2">Less Obvious Place</string>
            <string name="action_option_2">Dynamic Action Option 2</string>
        //OPTION 2
        //Weapon Spinner
            <string-array name="weapons_array">
                %s
            </string-array>
        //Weapon Spinner
        <string name="Splash">
                "Welcome" + %s + "!!!"
        </string>
    //DYNAMIC STRINGS
</resources>
